<resources>
    <string name="app_name" translatable="false">OpenWeather</string>
    <string name="weather_icon" translatable="false">Icon that shows displays the weather.</string>
    <string name="enter_city" translatable="false">Enter a city</string>
    <string name="search">Search</string>
    <string name="city">City: %1$s</string>
    <string name="temperature">Temperature: </string>
    <string name="weather">Weather: </string>
    <string name="wind_speed">Wind Speed: </string>
    <string name="humidity">Humidity: </string>
    <string name="clouds">Cloudiness: </string>
    <string name="date">"Date: "</string>
    <string name="temperature_format">Temperature: %.2f°F</string>
    <string name="wind_speed_format">Wind speed: %.2f mph</string>
    <string name="humidity_format">Humidity: %d%%</string>
    <string name="cloudiness_format">Cloudiness: %d%%</string>
    <string name="location">"Location: %1$s"</string>
    <string name="please_enter_location">Please enter a location to retrieve weather</string>
    <string name="unit_switch">Switch units</string>
    <string name="forecast">5 Day Forecast</string>
    <string name="time_of_day">Time of day:</string>
    <string name="description">"Description: "</string>
    <string name="current_weather">Current Weather</string>
    <string name="current_location">Current Location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>